# huginn

./: LICENSE  huginn.cabal
.stack-work/install/x86_64-freebsd/lts-7.14/8.0.1/flag-cache/: hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  parsec-3.1.11-BCos4GEVCuDB8dnOCBHO6X  semigroups-0.18.2-2lmUSJvrDkM6JBURGRclWz  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s  transformers-base-0.4.4-25SoAegOdaF8rLEnnb5jPI  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld  unordered-containers-0.2.7.1-Eo9jd5DMz45DhBLCG8skzW
.stack-work/install/x86_64-freebsd/lts-7.14/8.0.1/lib/x86_64-freebsd-ghc-8.0.1/huginn-0.1.0.0-H85hIuVlPwkFCtmCyCbyhs/Lang/Huginn/: AST.hi  Eval.dyn_hi  Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-freebsd/lts-7.14/8.0.1/pkgdb/: huginn-0.1.0.0-H85hIuVlPwkFCtmCyCbyhs.conf  package.cache
src/Lang/: Huginn.hs
src/Lang/Huginn/: AST.hs  Eval.hs  Parser.hs
