name:                huginn
version:             0.1.0.0
synopsis:            Simple DSL
description:         Please see README.md
homepage:            https://github.com/githubuser/huginn#readme
license:             BSD3
license-file:        LICENSE
author:              Casper van Kampen
maintainer:          ckampen@-no-spam-.com
copyright:           2016 Casper van Kampen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  exposed-modules:      Lang.Huginn
  other-modules:        Lang.Huginn.AST
                      , Lang.Huginn.Eval
                      , Lang.Huginn.Parser
  default-language:     Haskell2010
  build-depends:        base
                      , stm
                      , mtl
                      , text
                      , bytestring
                      , containers
                      , transformers
                      , unordered-containers
                      , semigroups
                      , parsec
                      , transformers-base

source-repository head
  type:     git
  location: https://github.com/ckampen/huginn
